add AI generated Oil Painting

--- a/gallery/agi/index.html
+++ b/gallery/agi/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<title>Agi | Evthron&#39;s blog</title>
+	<title>AI Generated Oil Painting | Evthron&#39;s blog</title>
 
 	<link rel="stylesheet" href="/css/style.css" type="text/css" media="all" />
 	<link rel="icon" href="/images/favicon.ico" type="image/x-icon">
@@ -56,8 +56,9 @@
 <main class="content">
 
 
-<h1>Agi</h1>
+<h1>AI Generated Oil Painting</h1>
 
+<p><img src="/images/london-cat.png" alt="cat"></p>
 
 
 </main>
