--- a/en/sandbox/about/index.html
+++ b/en/sandbox/about/index.html
@@ -315,7 +315,7 @@ List item universe Hack Dictionary Dictionary definitions See my first-real-blog
     <div class="tagCloud-tags">
         
             <a href="/en/categories/artwork/" class="font_size_2">
-                artwork
+                Artwork
             </a>
         
     </div>
