--- a/en/toolbox/autohotkey/index.html
+++ b/en/toolbox/autohotkey/index.html
@@ -318,7 +318,7 @@ F5: File Explorer F6: Firefox F7: Excel F8: Text editor ">
     <div class="tagCloud-tags">
         
             <a href="/en/categories/artwork/" class="font_size_2">
-                artwork
+                Artwork
             </a>
         
     </div>
