finalise instant-messaging

--- a/zh/index.html
+++ b/zh/index.html
@@ -367,7 +367,7 @@
 
     <div class="article-title-wrapper">
         <h2 class="article-title">
-            <a href="/zh/posts/instant-messaging/">網絡交流的障礙</a>
+            <a href="/zh/posts/instant-messaging/">即時通訊的障礙</a>
         </h2>
     
         
