--- a/en/gallery/complex-scenary/index.html
+++ b/en/gallery/complex-scenary/index.html
@@ -440,14 +440,18 @@
     <section class="article-content">
     
     
-    <p><img src="/20230524.jpg"
-	
-	
-	
+    <p><img src="/en/gallery/complex-scenary/nightview.jpg"
+	width="2317"
+	height="2649"
+	srcset="/en/gallery/complex-scenary/nightview_hu3b404767f3095d28632507beaa2c45b9_1432291_480x0_resize_q75_box.jpg 480w, /en/gallery/complex-scenary/nightview_hu3b404767f3095d28632507beaa2c45b9_1432291_1024x0_resize_q75_box.jpg 1024w"
 	loading="lazy"
 	
 		alt="complex-sketch"
 	
+	
+		class="gallery-image" 
+		data-flex-grow="87"
+		data-flex-basis="209px"
 	
 ></p>
 <p>Sketching means capturing everything you see on paper. Look as closely as you can!</p>
