--- a/zh/toolbox/autohotkey/index.html
+++ b/zh/toolbox/autohotkey/index.html
@@ -341,7 +341,7 @@
 
     <div class="tagCloud-tags">
         
-            <a href="/zh/categories/artwork/" class="font_size_2">
+            <a href="/zh/categories/artwork/" class="font_size_6">
                 Artwork
             </a>
         
@@ -426,16 +426,29 @@
     <p>我的 AutoHotKey 設定：</p>
 <h1 id="fn-鍵">Fn 鍵</h1>
 <ul>
-<li>F1 啟動番茄鐘</li>
-<li>F3: Saladict</li>
-<li>F4 Win + D 返回桌面</li>
+<li>F1: 啟動番茄鐘</li>
+<li>F2: 保持原樣（重命名）</li>
+<li>F3: 字典軟件（Saladict）</li>
+<li>F4: Win + D（返回桌面）</li>
 </ul>
-<p>F5-F8對應工作列的軟件</p>
+<p>F5-F8 對應工作列的軟件</p>
 <ul>
-<li>F5: 瀏覽檔案</li>
+<li>F5: 文件管理器</li>
 <li>F6: 瀏覽器</li>
-<li>F7: Excel</li>
-<li>F8: 文字編輯器</li>
+<li>F7: 文字編輯器</li>
+<li>F8: 筆記軟件</li>
+</ul>
+<h1 id="文本輸入">文本輸入</h1>
+<ul>
+<li>Capslock: Backspace</li>
+<li>Backspace: Win + Space（切換語言）</li>
+</ul>
+<h1 id="瀏覽網頁">瀏覽網頁</h1>
+<ul>
+<li>Delete: Ctrl + w （關閉分頁）</li>
+<li>Insert: Ctrl + t （新增分頁）</li>
+<li>Page Up: Ctrl + Shift + Tab（切換分頁）</li>
+<li>Page Down: Ctrl + Tab（切換分頁）</li>
 </ul>
 
 </section>
