correct time zone

--- a/en/sandbox/foreigner/index.html
+++ b/en/sandbox/foreigner/index.html
@@ -432,7 +432,7 @@
 
 
         <span>
-            Last updated on Mar 29, 2024 21:40 CST
+            Last updated on 2024-03-29 21:40 &#43;08:00
         </span>
     </section></footer>
 
