--- a/en/sandbox/painter/index.html
+++ b/en/sandbox/painter/index.html
@@ -544,7 +544,7 @@ Level 0: Metrics not foundLevel 1: Metrics found, 0Level 2: 12Level 3: 36Lev
 
 
         <span>
-            Last updated on Mar 29, 2024 21:39 CST
+            Last updated on 2024-03-29 21:39 &#43;08:00
         </span>
     </section></footer>
 
