--- a/en/toolbox/autohotkey/index.html
+++ b/en/toolbox/autohotkey/index.html
@@ -522,7 +522,7 @@ F5: Ctrl &#43; F (Search) F6: Shift &#43; Ctrl &#43; T （Re-open closed tabs in
 
 
         <span>
-            Last updated on Mar 30, 2024 23:57 CST
+            Last updated on 2024-03-30 23:57 &#43;08:00
         </span>
     </section></footer>
 
