--- a/en/toolbox/say-goodbye-to-internet/index.html
+++ b/en/toolbox/say-goodbye-to-internet/index.html
@@ -544,7 +544,7 @@ uBlock Origin It&amp;rsquo;s not just an ad blocker. You can block all distracti
 
 
         <span>
-            Last updated on Mar 30, 2024 23:47 CST
+            Last updated on 2024-03-30 23:47 &#43;08:00
         </span>
     </section></footer>
 
