--- a/en/tweet/easier-publish/index.html
+++ b/en/tweet/easier-publish/index.html
@@ -480,7 +480,7 @@ If I could simply use Obsidian or VS Code to edit the files, why should I config
 
 
         <span>
-            Last updated on Mar 30, 2024 23:19 CST
+            Last updated on 2024-03-30 23:19 &#43;08:00
         </span>
     </section></footer>
 
