--- a/tok/tweet/easier-publish/index.html
+++ b/tok/tweet/easier-publish/index.html
@@ -442,7 +442,7 @@ mi ken kepeken ilo Obsidian anu ilo VS Code la mi ken ala pali e pakala ni. mi p
 
 
         <span>
-            tenpo ante Mar 30, 2024 23:20 CST
+            tenpo ante 2024-03-30 23:20 &#43;08:00
         </span>
     </section></footer>
 
