--- a/zh/toolbox/say-goodbye-to-internet/index.html
+++ b/zh/toolbox/say-goodbye-to-internet/index.html
@@ -559,7 +559,7 @@ iOS 內置的使用時間限制 讓別人保管密碼。">
 
 
         <span>
-            最後更新 Mar 30, 2024 23:47 CST
+            最後更新 2024-03-30 23:47 &#43;08:00
         </span>
     </section></footer>
 
