--- a/en/sandbox/right-sider/index.html
+++ b/en/sandbox/right-sider/index.html
@@ -434,7 +434,7 @@
 
 
         <span>
-            Last updated on Mar 29, 2024 21:43 CST
+            Last updated on 2024-03-29 21:43 &#43;08:00
         </span>
     </section></footer>
 
