--- a/en/sandbox/writer/index.html
+++ b/en/sandbox/writer/index.html
@@ -434,7 +434,7 @@
 
 
         <span>
-            Last updated on Mar 30, 2024 17:32 CST
+            Last updated on 2024-03-30 17:32 &#43;08:00
         </span>
     </section></footer>
 
