--- a/zh/tweet/easier-publish/index.html
+++ b/zh/tweet/easier-publish/index.html
@@ -480,7 +480,7 @@
 
 
         <span>
-            最後更新 Mar 30, 2024 23:19 CST
+            最後更新 2024-03-30 23:19 &#43;08:00
         </span>
     </section></footer>
 
