--- a/en/sandbox/painter/index.html
+++ b/en/sandbox/painter/index.html
@@ -430,7 +430,7 @@ Level 0: Metrics not foundLevel 1: Metrics found, 0Level 2: 12Level 3: 36Lev
   <path d="M3 11h16" />
   <path d="M18 16.496v1.504l1 1" />
 </svg>
-                <time class="article-time--published">Mar 10, 2024</time>
+                <time class="article-time--published">2024-03-10</time>
             </div>
         
 
