--- a/en/toolbox/autohotkey/index.html
+++ b/en/toolbox/autohotkey/index.html
@@ -439,7 +439,7 @@ F5: Ctrl &#43; F (Search) F6: Shift &#43; Ctrl &#43; T （Re-open closed tabs in
   <path d="M3 11h16" />
   <path d="M18 16.496v1.504l1 1" />
 </svg>
-                <time class="article-time--published">Dec 22, 2023</time>
+                <time class="article-time--published">2023-12-22</time>
             </div>
         
 
