--- a/en/toolbox/say-goodbye-to-internet/index.html
+++ b/en/toolbox/say-goodbye-to-internet/index.html
@@ -468,7 +468,7 @@ uBlock Origin It&amp;rsquo;s not just an ad blocker. You can block all distracti
   <path d="M3 11h16" />
   <path d="M18 16.496v1.504l1 1" />
 </svg>
-                <time class="article-time--published">Jan 29, 2024</time>
+                <time class="article-time--published">2024-01-29</time>
             </div>
         
 
