--- a/en/tweet/easier-publish/index.html
+++ b/en/tweet/easier-publish/index.html
@@ -413,7 +413,7 @@ If I could simply use Obsidian or VS Code to edit the files, why should I config
   <path d="M3 11h16" />
   <path d="M18 16.496v1.504l1 1" />
 </svg>
-                <time class="article-time--published">Mar 30, 2024</time>
+                <time class="article-time--published">2024-03-30</time>
             </div>
         
 
