--- a/tok/tweet/delusions/index.html
+++ b/tok/tweet/delusions/index.html
@@ -366,7 +366,7 @@
   <path d="M3 11h16" />
   <path d="M18 16.496v1.504l1 1" />
 </svg>
-                <time class="article-time--published">Mar 14, 2024</time>
+                <time class="article-time--published">2024-03-14</time>
             </div>
         
 
