--- a/tok/tweet/easier-publish/index.html
+++ b/tok/tweet/easier-publish/index.html
@@ -375,7 +375,7 @@ mi ken kepeken ilo Obsidian anu ilo VS Code la mi ken ala pali e pakala ni. mi p
   <path d="M3 11h16" />
   <path d="M18 16.496v1.504l1 1" />
 </svg>
-                <time class="article-time--published">Mar 30, 2024</time>
+                <time class="article-time--published">2024-03-30</time>
             </div>
         
 
