--- a/zh/gallery/agi/index.html
+++ b/zh/gallery/agi/index.html
@@ -444,7 +444,7 @@ Model: v1-5-pruned-emaonly"><meta name="twitter:card" content="summary_large_ima
   <path d="M3 11h16" />
   <path d="M18 16.496v1.504l1 1" />
 </svg>
-                <time class="article-time--published">Dec 02, 2023</time>
+                <time class="article-time--published">2023-12-02</time>
             </div>
         
 
