--- a/zh/toolbox/say-goodbye-to-internet/index.html
+++ b/zh/toolbox/say-goodbye-to-internet/index.html
@@ -483,7 +483,7 @@ iOS 內置的使用時間限制 讓別人保管密碼。">
   <path d="M3 11h16" />
   <path d="M18 16.496v1.504l1 1" />
 </svg>
-                <time class="article-time--published">Jan 29, 2024</time>
+                <time class="article-time--published">2024-01-29</time>
             </div>
         
 
