--- a/zh/tweet/productivity-tools/index.html
+++ b/zh/tweet/productivity-tools/index.html
@@ -404,7 +404,7 @@
   <path d="M3 11h16" />
   <path d="M18 16.496v1.504l1 1" />
 </svg>
-                <time class="article-time--published">Mar 02, 2024</time>
+                <time class="article-time--published">2024-03-02</time>
             </div>
         
 
