--- a/zh/tweet/search-count/index.html
+++ b/zh/tweet/search-count/index.html
@@ -404,7 +404,7 @@
   <path d="M3 11h16" />
   <path d="M18 16.496v1.504l1 1" />
 </svg>
-                <time class="article-time--published">Feb 29, 2024</time>
+                <time class="article-time--published">2024-02-29</time>
             </div>
         
 
