--- a/zh/tweet/winter/index.html
+++ b/zh/tweet/winter/index.html
@@ -404,7 +404,7 @@
   <path d="M3 11h16" />
   <path d="M18 16.496v1.504l1 1" />
 </svg>
-                <time class="article-time--published">Dec 22, 2023</time>
+                <time class="article-time--published">2023-12-22</time>
             </div>
         
 
