--- a/en/sandbox/writer/index.html
+++ b/en/sandbox/writer/index.html
@@ -383,6 +383,10 @@
                 posts
             </a>
         
+            <a href="/en/categories/toolbox/" class="font_size_1">
+                toolbox
+            </a>
+        
     </div>
 </section>
 
