--- a/en/tweet/better-search-engine/index.html
+++ b/en/tweet/better-search-engine/index.html
@@ -372,6 +372,10 @@ Anything that is fun and useless will eventually be blocked by my own hands. It&
                 posts
             </a>
         
+            <a href="/en/categories/toolbox/" class="font_size_1">
+                toolbox
+            </a>
+        
     </div>
 </section>
 
