--- a/en/tweet/search-count/index.html
+++ b/en/tweet/search-count/index.html
@@ -363,6 +363,10 @@ It was a good idea but I can&amp;rsquo;t really cling to it.">
                 posts
             </a>
         
+            <a href="/en/categories/toolbox/" class="font_size_1">
+                toolbox
+            </a>
+        
     </div>
 </section>
 
