--- a/en/gallery/complex-scenary/index.html
+++ b/en/gallery/complex-scenary/index.html
@@ -358,6 +358,10 @@
                 posts
             </a>
         
+            <a href="/en/categories/toolbox/" class="font_size_1">
+                toolbox
+            </a>
+        
     </div>
 </section>
 
