--- a/en/sandbox/programmer/index.html
+++ b/en/sandbox/programmer/index.html
@@ -392,6 +392,10 @@ Install Arch Linux Set up Chinese input method (fcitx5) Alternative to Dexpot (T
                 posts
             </a>
         
+            <a href="/en/categories/toolbox/" class="font_size_1">
+                toolbox
+            </a>
+        
     </div>
 </section>
 
