--- a/en/toolbox/say-goodbye-to-internet/index.html
+++ b/en/toolbox/say-goodbye-to-internet/index.html
@@ -415,6 +415,10 @@
                 posts
             </a>
         
+            <a href="/en/categories/toolbox/" class="font_size_1">
+                toolbox
+            </a>
+        
     </div>
 </section>
 
