--- a/zh/tweet/better-search-engine/index.html
+++ b/zh/tweet/better-search-engine/index.html
@@ -372,6 +372,10 @@ https://ericmurphy.xyz/blog/discoverability/
                 Sandbox
             </a>
         
+            <a href="/zh/categories/toolbox/" class="font_size_2">
+                toolbox
+            </a>
+        
             <a href="/zh/categories/posts/" class="font_size_1">
                 posts
             </a>
