fix sitelen-pona template

--- a/zh/sandbox/arsenal/index.html
+++ b/zh/sandbox/arsenal/index.html
@@ -491,14 +491,14 @@
 
 </div>
 <h3 id="sitelen-pona">sitelen pona</h3>
-<p><span class="sitelen-pona">sijelo mi li ilo utala</p>
-<span class="sitelen-pona">telo loje insa mi li kiwen. pilin mi li kule ala</p>
-<span class="sitelen-pona">mi tawa e ma utala mute taso mi anpa ala</p>
-<span class="sitelen-pona">mi anpa ala e jan ike</p>
-<span class="sitelen-pona">mi sewi ala e jan ike</p>
-<span class="sitelen-pona">poka mi li lon ala jan. mi ante e kiwen lon nena pi ilo utala</p>
-<span class="sitelen-pona">ni la mi wile ala nasin pona</p>
-<span class="sitelen-pona">sijelo mi li ilo utala mute</p></p>
+<p><div><span class="sitelen-pona">sijelo mi li ilo utala</span></div>
+<div><span class="sitelen-pona">telo loje insa mi li kiwen. pilin mi li kule ala</span></div>
+<div><span class="sitelen-pona">mi tawa e ma utala mute taso mi anpa ala</span></div>
+<div><span class="sitelen-pona">mi anpa ala e jan ike</span></div>
+<div><span class="sitelen-pona">mi sewi ala e jan ike</span></div>
+<div><span class="sitelen-pona">poka mi li lon ala jan. mi ante e kiwen lon nena pi ilo utala</span></div>
+<div><span class="sitelen-pona">ni la mi wile ala nasin pona</span></div>
+<div><span class="sitelen-pona">sijelo mi li ilo utala mute</span></div></p>
 
     </section>
 
