fix sandbox showcase vocab component

--- a/zh/sandbox/arsenal/index.html
+++ b/zh/sandbox/arsenal/index.html
@@ -401,20 +401,59 @@
     <button class="vocab-button" type="button" tag="pos-n" > pos-n </button>
 
 </div>
-<div class="vocab-item-container" tags="">
+<div class="vocab-item-container" tags="pos-adj property-similar type-people">
   
     <div class="vocab-item"> fellow <div> pos-adj property-similar type-people</div></div>
-    <div class="vocab-item"> out of luck <div> pos-adj type-bad</div></div>
-    <div class="vocab-item"> sleek <div> pos-adj property-personality theme-fashion type-bad type-good</div></div>
-    <div class="vocab-item"> livelihood <div> pos-n theme-work</div></div>
-    <div class="vocab-item"> gem <div> pos-n type-good type-object type-people</div></div>
-    <div class="vocab-item"> phoenix <div> pos-n type-object</div></div>
-    <div class="vocab-item"> attorney <div> pos-n type-people</div></div>
-    <div class="vocab-item"> peril <div> pos-n property-difficult type-bad</div></div>
-    <div class="vocab-item"> foresee <div> pos-v time-future</div></div>
-    <div class="vocab-item"> keep you posted <div> pos-v theme-info</div></div>
-    <div class="vocab-item"> pay off <div> pos-v time-result type-good</div></div>
 
+</div>
+<div class="vocab-item-container" tags="pos-adj type-bad">
+  
+    <div class="vocab-item"> out of luck <div> pos-adj type-bad</div></div>
+
+</div>
+<div class="vocab-item-container" tags="pos-adj property-personality theme-fashion type-bad type-good">
+  
+    <div class="vocab-item"> sleek <div> pos-adj property-personality theme-fashion type-bad type-good</div></div>
+
+</div>
+<div class="vocab-item-container" tags="pos-n theme-work">
+  
+    <div class="vocab-item"> livelihood <div> pos-n theme-work</div></div>
+
+</div>
+<div class="vocab-item-container" tags="pos-n type-good type-object type-people">
+  
+    <div class="vocab-item"> gem <div> pos-n type-good type-object type-people</div></div>
+
+</div>
+<div class="vocab-item-container" tags="pos-n type-object">
+  
+    <div class="vocab-item"> phoenix <div> pos-n type-object</div></div>
+
+</div>
+<div class="vocab-item-container" tags="pos-n type-people">
+  
+    <div class="vocab-item"> attorney <div> pos-n type-people</div></div>
+
+</div>
+<div class="vocab-item-container" tags="pos-n property-difficult type-bad">
+  
+    <div class="vocab-item"> peril <div> pos-n property-difficult type-bad</div></div>
+
+</div>
+<div class="vocab-item-container" tags="pos-v time-future">
+  
+    <div class="vocab-item"> foresee <div> pos-v time-future</div></div>
+
+</div>
+<div class="vocab-item-container" tags="pos-v theme-info">
+  
+    <div class="vocab-item"> keep you posted <div> pos-v theme-info</div></div>
+
+</div>
+<div class="vocab-item-container" tags="pos-v time-result type-good">
+  
+    <div class="vocab-item"> pay off <div> pos-v time-result type-good</div></div>
 
 </div></p>
 <h3 id="thumbnail-progress-bar">Thumbnail progress bar</h3>
