remove truncate for tweet

--- a/zh/sandbox/arsenal/index.html
+++ b/zh/sandbox/arsenal/index.html
@@ -551,19 +551,19 @@
 <div><span class="sitelen-pona">sijelo mi li ilo utala mute</span></div></p>
 <h3 id="book-card">Book card</h3>
 
-<a href='#sample-book' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL7440033M-M.jpg"
-    />
+
+<a href="#sample-book">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL7440033M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">sample book</div>
   </div>
-  <div class="book-card-title">
-   sample book 
-  </div>
-</div>
 </a>
+
 
     </section>
 
