--- a/zh/sandbox/img-fetch/index.html
+++ b/zh/sandbox/img-fetch/index.html
@@ -325,19 +325,19 @@ How to talk to anyone
 </div>
 
 
-<a href='#how-to-talk-to-anyone' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL7299892M-M.jpg"
-    />
+
+<a href="#how-to-talk-to-anyone">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL7299892M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">How to talk to anyone</div>
   </div>
-  <div class="book-card-title">
-   How to talk to anyone 
-  </div>
-</div>
 </a>
+
 
     </section>
 
