--- a/zh/skill/painter/index.html
+++ b/zh/skill/painter/index.html
@@ -1606,201 +1606,201 @@
     </div>
 </div>
 <p>
-<a href='#andrew-loomis---drawing-the-head-and-hands' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL26841938M-M.jpg"
-    />
+
+<a href="#andrew-loomis---drawing-the-head-and-hands">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL26841938M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">Andrew Loomis - Drawing the Head and Hands</div>
   </div>
-  <div class="book-card-title">
-   Andrew Loomis - Drawing the Head and Hands 
-  </div>
-</div>
 </a>
 
-<a href='#andrew-loomis---figure-drawing-for-all-its-worth' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL47084536M-M.jpg"
-    />
+
+
+<a href="#andrew-loomis---figure-drawing-for-all-its-worth">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL47084536M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">Andrew Loomis - Figure drawing for all it&#39;s worth</div>
   </div>
-  <div class="book-card-title">
-   Andrew Loomis - Figure drawing for all it&#39;s worth 
-  </div>
-</div>
 </a>
 
-<a href='#betty-edwards---the-new-drawing-on-the-right-side-of-the-brain' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL24346158M-M.jpg"
-    />
+
+
+<a href="#betty-edwards---the-new-drawing-on-the-right-side-of-the-brain">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL24346158M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">Betty Edwards - The new drawing on the right side of the brain</div>
   </div>
-  <div class="book-card-title">
-   Betty Edwards - The new drawing on the right side of the brain 
-  </div>
-</div>
 </a>
 
-<a href='#betty-edwards---color--a-course-in-mastering-the-art-of-mixing-colors' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL8816408M-M.jpg"
-    />
+
+
+<a href="#betty-edwards---color--a-course-in-mastering-the-art-of-mixing-colors">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL8816408M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">Betty Edwards - Color : A Course in Mastering the Art of Mixing Colors</div>
   </div>
-  <div class="book-card-title">
-   Betty Edwards - Color : A Course in Mastering the Art of Mixing Colors 
-  </div>
-</div>
 </a>
 
-<a href='#charles-williams---basic-drawing--how-to-draw-what-you-see' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL46088793M-M.jpg"
-    />
+
+
+<a href="#charles-williams---basic-drawing--how-to-draw-what-you-see">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL46088793M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">Charles Williams - Basic drawing : how to draw what you see</div>
   </div>
-  <div class="book-card-title">
-   Charles Williams - Basic drawing : how to draw what you see 
-  </div>
-</div>
 </a>
 
-<a href='#donna-krizek---drawing-and-sketching-secrets--200-tips-and-techniques-for-drawing-the-easy-way' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL25173760M-M.jpg"
-    />
+
+
+<a href="#donna-krizek---drawing-and-sketching-secrets--200-tips-and-techniques-for-drawing-the-easy-way">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL25173760M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">Donna Krizek - Drawing and sketching secrets : 200 tips and techniques for drawing the easy way</div>
   </div>
-  <div class="book-card-title">
-   Donna Krizek - Drawing and sketching secrets : 200 tips and techniques for drawing the easy way 
-  </div>
-</div>
 </a>
 
-<a href='#gilles-ronin---le-dessin-en-perspective-a-main-levee' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL48624860M-M.jpg"
-    />
+
+
+<a href="#gilles-ronin---le-dessin-en-perspective-a-main-levee">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL48624860M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">Gilles Ronin - Le dessin en perspective a main levee</div>
   </div>
-  <div class="book-card-title">
-   Gilles Ronin - Le dessin en perspective a main levee 
-  </div>
-</div>
 </a>
 
-<a href='#james-hobbs---sketch-your-world' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL26122953M-M.jpg"
-    />
+
+
+<a href="#james-hobbs---sketch-your-world">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL26122953M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">James Hobbs - Sketch Your World</div>
   </div>
-  <div class="book-card-title">
-   James Hobbs - Sketch Your World 
-  </div>
-</div>
 </a>
 
-<a href='#mark-kistler---you-can-draw-in-30-days--the-fun-easy-way-to-learn-to-draw-in-one-month-or-less' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL26010041M-M.jpg"
-    />
+
+
+<a href="#mark-kistler---you-can-draw-in-30-days--the-fun-easy-way-to-learn-to-draw-in-one-month-or-less">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL26010041M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">Mark Kistler - You can draw in 30 days : the fun, easy way to learn to draw in one month or less</div>
   </div>
-  <div class="book-card-title">
-   Mark Kistler - You can draw in 30 days : the fun, easy way to learn to draw in one month or less 
-  </div>
-</div>
 </a>
 
-<a href='#mark-kistler---you-can-draw-it-in-just-30-minutes--see-it-and-sketch-it-in-a-half-hour-or-less' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL27404161M-M.jpg"
-    />
+
+
+<a href="#mark-kistler---you-can-draw-it-in-just-30-minutes--see-it-and-sketch-it-in-a-half-hour-or-less">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL27404161M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">Mark Kistler - You can draw it in just 30 minutes : see it and sketch it in a half-hour or less</div>
   </div>
-  <div class="book-card-title">
-   Mark Kistler - You can draw it in just 30 minutes : see it and sketch it in a half-hour or less 
-  </div>
-</div>
 </a>
 
-<a href='#rudy-de-reyna---how-to-draw-what-you-see' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL5317479M-M.jpg"
-    />
+
+
+<a href="#rudy-de-reyna---how-to-draw-what-you-see">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL5317479M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">Rudy de Reyna - How to draw what you see</div>
   </div>
-  <div class="book-card-title">
-   Rudy de Reyna - How to draw what you see 
-  </div>
-</div>
 </a>
 
-<a href='#r-o-dunlop-ra---painting-for-pleasure' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL6090516M-M.jpg"
-    />
+
+
+<a href="#r-o-dunlop-ra---painting-for-pleasure">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL6090516M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">R. O. Dunlop, R.A - Painting for pleasure</div>
   </div>
-  <div class="book-card-title">
-   R. O. Dunlop, R.A - Painting for pleasure 
-  </div>
-</div>
 </a>
 
-<a href='#sam-piyasena-beverly-philp---just-draw-it' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL25973254M-M.jpg"
-    />
+
+
+<a href="#sam-piyasena-beverly-philp---just-draw-it">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL25973254M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">Sam Piyasena, Beverly Philp - Just draw it!</div>
   </div>
-  <div class="book-card-title">
-   Sam Piyasena, Beverly Philp - Just draw it! 
-  </div>
-</div>
 </a>
 
-<a href='#%e8%b6%99%e5%b7%8d%e5%b2%a9-%e9%99%bd%e4%bd%b3-%e6%a5%8a%e8%90%8c---%e7%89%a9%e6%88%91%e4%b9%8b%e9%96%93--%e5%af%ab%e7%94%9f%e7%9a%84%e4%b8%80%e7%a8%ae%e6%96%b9%e6%b3%95' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/-M.jpg"
-    />
+
+
+<a href="#%e8%b6%99%e5%b7%8d%e5%b2%a9-%e9%99%bd%e4%bd%b3-%e6%a5%8a%e8%90%8c---%e7%89%a9%e6%88%91%e4%b9%8b%e9%96%93--%e5%af%ab%e7%94%9f%e7%9a%84%e4%b8%80%e7%a8%ae%e6%96%b9%e6%b3%95">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">趙巍岩, 陽佳, 楊萌 - 物我之間 : 寫生的一種方法</div>
   </div>
-  <div class="book-card-title">
-   趙巍岩, 陽佳, 楊萌 - 物我之間 : 寫生的一種方法 
-  </div>
-</div>
-</a></p>
+</a>
+</p>
 <h3 id="andrew-loomis---drawing-the-head-and-hands">Andrew Loomis - Drawing the Head and Hands</h3>
 <h3 id="andrew-loomis---figure-drawing-for-all-its-worth">Andrew Loomis - Figure drawing for all it&rsquo;s worth</h3>
 <ul>
