--- a/zh/skill/right-sider/index.html
+++ b/zh/skill/right-sider/index.html
@@ -391,47 +391,47 @@
     </div>
 </div>
 
-<a href='#leil-lowndes---how-to-talk-to-anyone--92-little-tricks-for-big-success-in-relationships' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL7299892M-M.jpg"
-    />
+
+<a href="#leil-lowndes---how-to-talk-to-anyone--92-little-tricks-for-big-success-in-relationships">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL7299892M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">Leil Lowndes - How to talk to anyone : 92 little tricks for big success in relationships</div>
   </div>
-  <div class="book-card-title">
-   Leil Lowndes - How to talk to anyone : 92 little tricks for big success in relationships 
-  </div>
-</div>
 </a>
 
-<a href='#melanie-joy---getting-relationships-right--how-to-build-resilience-and-thrive-in-life-love-and-work' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL32589478M-M.jpg"
-    />
+
+
+<a href="#melanie-joy---getting-relationships-right--how-to-build-resilience-and-thrive-in-life-love-and-work">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL32589478M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">Melanie Joy - Getting relationships right : how to build resilience and thrive in life, love, and work</div>
   </div>
-  <div class="book-card-title">
-   Melanie Joy - Getting relationships right : how to build resilience and thrive in life, love, and work 
-  </div>
-</div>
 </a>
 
-<a href='#keith-ferrazzi-tahl-raz---never-eat-alone--and-other-secrets-to-success-one-relationship-at-a-time' >
-<div class="book-card">
-  <div class="book-card-background">
-    <img
-      class="book-card-cover"
-      src="https://covers.openlibrary.org/b/olid/OL7441021M-M.jpg"
-    />
+
+
+<a href="#keith-ferrazzi-tahl-raz---never-eat-alone--and-other-secrets-to-success-one-relationship-at-a-time">
+  <div class="book-card">
+    <div class="book-card-background">
+      <img
+        class="book-card-cover"
+        src="https://covers.openlibrary.org/b/olid/OL7441021M-M.jpg"
+      />
+    </div>
+    <div class="book-card-title">Keith Ferrazzi, Tahl Raz - Never eat alone : and other secrets to success, one relationship at a time</div>
   </div>
-  <div class="book-card-title">
-   Keith Ferrazzi, Tahl Raz - Never eat alone : and other secrets to success, one relationship at a time 
-  </div>
-</div>
 </a>
+
 <h3 id="leil-lowndes---how-to-talk-to-anyone--92-little-tricks-for-big-success-in-relationships">Leil Lowndes - How to talk to anyone : 92 little tricks for big success in relationships</h3>
 <ul>
 <li>A very practical conversation guide that helped me find the joy of small talk. Even if you were an alien from another universe, you can blend in with normal human by following those guildlines, starting from &rsquo;look into other&rsquo;s eyes'.</li>
