--- a/en/oklch-color-wheel/index.html
+++ b/en/oklch-color-wheel/index.html
@@ -38,14 +38,14 @@
 
     <div class="controls">
       <label>
-        Lightness (L): <span id="lValue">0.75</span>
+        Lightness (L): <span id="lValue">0.67</span>
         <input
           type="range"
           id="lControl"
-          min="0"
-          max="1"
-          step="0.01"
-          value="0.75"
+          min="0.166"
+          max="0.83"
+          step="0.166"
+          value="0.667"
         />
       </label>
       <label>
@@ -53,9 +53,9 @@
         <input
           type="range"
           id="cControl"
-          min="0"
-          max="0.2"
-          step="0.01"
+          min="0.03"
+          max="0.21"
+          step="0.036"
           value="0.12"
         />
       </label>
@@ -75,32 +75,30 @@
         <input
           type="range"
           id="grayControl"
-          min="0"
-          max="1"
-          step="0.01"
-          value="0.5"
+          min="0.166"
+          max="0.83"
+          step="0.166"
+          value="0.667"
         />
       </label>
       <label>
         Hue Offset: <span id="hueOffsetValue">0</span>°
-        <input type="range" id="hueOffsetControl" min="0" max="15" value="0" />
+        <input type="range" id="hueOffsetControl" min="0" max="15" step="3.75" value="0" />
       </label>
-      <div style="text-align: center">
-        <button
-          id="downloadBtn"
-          style="
-            margin-top: 10px;
-            padding: 8px 12px;
-            background: #4caf50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-          "
-        >
-          Download image
-        </button>
-      </div>
+      <button
+        id="downloadBtn"
+        style="
+          margin-top: 10px;
+          padding: 8px 12px;
+          background: #4caf50;
+          color: white;
+          border: none;
+          border-radius: 4px;
+          cursor: pointer;
+        "
+      >
+        Download image
+      </button>
     </div>
 
     <script>
