--- a/zh/code/entropy-perplexity/index.html
+++ b/zh/code/entropy-perplexity/index.html
@@ -415,6 +415,12 @@ $$</p>
 H(P) = \sum_{i=1}^n p(i) \log(\frac{1}{p(i)})
 $$</p>
 <p>這和熵的公式只差了一個 log，可以看見真正的資訊量有相乘的性質，很麻煩。這甚至是我第一次看見幾何平均，最大的問題是概率相乘會變得很小，電腦的精度不夠。而編碼資訊需要的比特數則有着相加的性質，更加好用。所以用熵來定義困惑度感覺是一種運算上的技巧。</p>
+<h2 id="交叉熵">交叉熵</h2>
+<p>交叉熵能對比兩個概率分佈的相似度。
+$$
+CE(P, Q) = \sum_{i=1}^n \text{actualProbability}(i) \log(\frac{1}{\text{predictionProbability}(i)})
+$$</p>
+<p>交叉熵同樣是熵，所以意義也是編碼需要的比特量。一般的熵代表的是編碼需要的最小比特數，而交叉熵就説明了當我們的概率預測出錯的時候，實際需要的比特數。要讓編碼的比特數變得最少，就要給發生概率高的事件分配短一點的編碼，給發生概率低的事件用長一點的編碼也沒關係，如果對於一件發生概率很高的事件，我們卻以為發生概率很低，$\log(\frac{1}{p(i)})$ 就會變大，會分配多了好幾個比特用來編碼，訊息就會變得很冗長。因此降低交叉熵就能讓預測的概率接近正確的概率。</p>
 
     </section>
 
