--- a/zh/code/entropy-perplexity/index.html
+++ b/zh/code/entropy-perplexity/index.html
@@ -11,7 +11,7 @@ $$ H(P) = \sum_{i=1}^n p(i) \log(\frac{1}{p(i)}) $$
 概率越高，越有可能發生，事情就越不稀有。所以可以用 $p$ 的倒數 $\frac{1}{p}$ 代表稀有度。
 把所有事件的稀有度取 log ，按照發生的頻率做按比例加起來，也就是乘以概率，就得到了總體事件的稀有度。
 拋硬幣得到每種結果的概率都是一樣的，所以每一種事件的稀有度也是相同的。
-$\frac{1}{\frac{1}{2} = 2$ ，$\log 2 = 1$。拋一次硬幣，無論得到的結果是正面還是反面。稀有度都是 1。所以平均來說，拋一次硬幣這個事件的稀有度也是 1。
+$\frac{1}{\frac{1}{2}} = 2$ ，$\log 2 = 1$。拋一次硬幣，無論得到的結果是正面還是反面。稀有度都是 1。所以平均來說，拋一次硬幣這個事件的稀有度也是 1。
 每個結果的概率均等的話，似乎看不出稀有度為什麼要取平均，這裏再給一個換個概率不均等的例子。
 硬幣得到正面的概率是 1/3，得到反面的結果是 2/3，正面的稀有度是 3，反面的稀有度是 1.5，取 log 之後得到 1.58 和 0.58。所以整個拋硬幣事件的稀有度是 1.58 × 1/3 &#43; 0.58 × 2/3 = 0.913。數值比公平硬幣低，說明比拋不公平的硬幣和公平硬幣相比少了點驚喜。
 結果越難預測，稀有度就越高。熵就越高。
@@ -37,7 +37,7 @@ $$ H(P) = \sum_{i=1}^n p(i) \log(\frac{1}{p(i)}) $$
 概率越高，越有可能發生，事情就越不稀有。所以可以用 $p$ 的倒數 $\frac{1}{p}$ 代表稀有度。
 把所有事件的稀有度取 log ，按照發生的頻率做按比例加起來，也就是乘以概率，就得到了總體事件的稀有度。
 拋硬幣得到每種結果的概率都是一樣的，所以每一種事件的稀有度也是相同的。
-$\frac{1}{\frac{1}{2} = 2$ ，$\log 2 = 1$。拋一次硬幣，無論得到的結果是正面還是反面。稀有度都是 1。所以平均來說，拋一次硬幣這個事件的稀有度也是 1。
+$\frac{1}{\frac{1}{2}} = 2$ ，$\log 2 = 1$。拋一次硬幣，無論得到的結果是正面還是反面。稀有度都是 1。所以平均來說，拋一次硬幣這個事件的稀有度也是 1。
 每個結果的概率均等的話，似乎看不出稀有度為什麼要取平均，這裏再給一個換個概率不均等的例子。
 硬幣得到正面的概率是 1/3，得到反面的結果是 2/3，正面的稀有度是 3，反面的稀有度是 1.5，取 log 之後得到 1.58 和 0.58。所以整個拋硬幣事件的稀有度是 1.58 × 1/3 &#43; 0.58 × 2/3 = 0.913。數值比公平硬幣低，說明比拋不公平的硬幣和公平硬幣相比少了點驚喜。
 結果越難預測，稀有度就越高。熵就越高。
@@ -59,7 +59,7 @@ $$ H(P) = \sum_{i=1}^n p(i) \log(\frac{1}{p(i)}) $$
 概率越高，越有可能發生，事情就越不稀有。所以可以用 $p$ 的倒數 $\frac{1}{p}$ 代表稀有度。
 把所有事件的稀有度取 log ，按照發生的頻率做按比例加起來，也就是乘以概率，就得到了總體事件的稀有度。
 拋硬幣得到每種結果的概率都是一樣的，所以每一種事件的稀有度也是相同的。
-$\frac{1}{\frac{1}{2} = 2$ ，$\log 2 = 1$。拋一次硬幣，無論得到的結果是正面還是反面。稀有度都是 1。所以平均來說，拋一次硬幣這個事件的稀有度也是 1。
+$\frac{1}{\frac{1}{2}} = 2$ ，$\log 2 = 1$。拋一次硬幣，無論得到的結果是正面還是反面。稀有度都是 1。所以平均來說，拋一次硬幣這個事件的稀有度也是 1。
 每個結果的概率均等的話，似乎看不出稀有度為什麼要取平均，這裏再給一個換個概率不均等的例子。
 硬幣得到正面的概率是 1/3，得到反面的結果是 2/3，正面的稀有度是 3，反面的稀有度是 1.5，取 log 之後得到 1.58 和 0.58。所以整個拋硬幣事件的稀有度是 1.58 × 1/3 &#43; 0.58 × 2/3 = 0.913。數值比公平硬幣低，說明比拋不公平的硬幣和公平硬幣相比少了點驚喜。
 結果越難預測，稀有度就越高。熵就越高。
@@ -395,7 +395,7 @@ $$</p>
 <p>概率越高，越有可能發生，事情就越不稀有。所以可以用 $p$ 的倒數 $\frac{1}{p}$ 代表稀有度。</p>
 <p>把所有事件的稀有度取 log ，按照發生的頻率做按比例加起來，也就是乘以概率，就得到了總體事件的稀有度。</p>
 <p>拋硬幣得到每種結果的概率都是一樣的，所以每一種事件的稀有度也是相同的。</p>
-<p>$\frac{1}{\frac{1}{2} = 2$ ，$\log 2 = 1$。拋一次硬幣，無論得到的結果是正面還是反面。稀有度都是 1。所以平均來說，拋一次硬幣這個事件的稀有度也是 1。</p>
+<p>$\frac{1}{\frac{1}{2}} = 2$ ，$\log 2 = 1$。拋一次硬幣，無論得到的結果是正面還是反面。稀有度都是 1。所以平均來說，拋一次硬幣這個事件的稀有度也是 1。</p>
 <p>每個結果的概率均等的話，似乎看不出稀有度為什麼要取平均，這裏再給一個換個概率不均等的例子。</p>
 <p>硬幣得到正面的概率是 1/3，得到反面的結果是 2/3，正面的稀有度是 3，反面的稀有度是 1.5，取 log 之後得到 1.58 和 0.58。所以整個拋硬幣事件的稀有度是 1.58 × 1/3 + 0.58 × 2/3 = 0.913。數值比公平硬幣低，說明比拋不公平的硬幣和公平硬幣相比少了點驚喜。</p>
 <p>結果越難預測，稀有度就越高。熵就越高。</p>
